--- a/index.Rmd
+++ b/index.Rmd
@@ -16,31 +16,31 @@ rm(list = ls()) #this is cleaning the memory list
 code for opening a file from a url (file in Excel), name it 'fragility23'?
 
 ```{r}
-linkGit="https://github.com/Funtamendals-Megana/Demo-1/raw/refs/heads/main/FSI-2023-DOWNLOAD.xlsx"
-fragility23=rio::import(file = linkGit)
+linkGit="https://github.com/Funtamendals-Megana/Demo-1/raw/refs/heads/main/FSI-2023-DOWNLOAD.xlsx" # Get the link from downloaded file
+fragility23=rio::import(file = linkGit) #Import the file and name it as fragility23 
 ```
 
 # exploratory commands
 
 find out column names in 'fragility23'?
 ```{r}
-names(x = fragility23)
+names(x = fragility23) #Get the column names from the spreadsheet and store in X variable
 ```
 
 Check the data types in df?
 ```{r}
-str(object = fragility23)
+str(object = fragility23) #in case there are any numbers, treat them as strings
 ```
 
 
 show me the first 10 rows?
 ```{r}
-head(x = fragility23,10)
+head(x = fragility23,10) #Retrieve the first 10 rows from the spreadsheet
 ```
 
 show me the last 10 rows?
 ```{r}
-tail(fragility23,10)
+tail(fragility23,10) #Retrieve the last 10 rows
 ```
 
 
@@ -54,17 +54,16 @@ S1: Demographic Pressures,
 P1: State Legitimacy,
 E2: Economic Inequality into object 'frag23_sub'
 ```{r}
-grep(pattern = "Country|S1|P1|E2|Total",x = names(fragility23),fixed = F,value = T) # test
 
-keep=grep("Country|S1|P1|E2|Total",names(fragility23),fixed = F,value = T)
-frag23_sub=fragility23[,keep]
+keep=grep("Country|S1|P1|E2|Total",names(fragility23),fixed = F,value = T) #Get the pattern and save the columns names in Keep variable
+frag23_sub=fragility23[,keep] #Download the data from the 3 columns and save them in frag23_sub
 ```
 
 ## renaming
 
 rename 'frag23_sub' columns, keep var codes  only
 ```{r}
-names(frag23_sub)[3:5]=c("S1","E2", "P1")
+names(frag23_sub)[3:5]=c("S1","E2", "P1") #Rename the columns with the proper headers
 ```
 
 
@@ -72,8 +71,8 @@ names(frag23_sub)[3:5]=c("S1","E2", "P1")
 
 get me the top ten best countries on the  'E2'  measure from 'frag23_sub'
 ```{r}
-tail(frag23_sub[order(x=-frag23_sub$E2),],10) #option1
-tail(frag23_sub[order(x=-frag23_sub$E2),'Country'],10) #option2
+tail(frag23_sub[order(x=-frag23_sub$E2),],10) #Get the top 10 best countries with all columns
+tail(frag23_sub[order(x=-frag23_sub$E2),'Country'],10) #Get the top 10 best countries with a country header
 ```
 
 
@@ -81,7 +80,7 @@ tail(frag23_sub[order(x=-frag23_sub$E2),'Country'],10) #option2
 
 give the statistical description of "frag23_sub"
 ```{r}
-summary(object = frag23_sub)
+summary(object = frag23_sub) #Summarize the subset data that is retrieved
 ```
 
 
@@ -89,13 +88,13 @@ the value of the worst quartile in Total
 ```{r}
 q3_Total=quantile(x = frag23_sub$Total, 
                   probs = 0.75, 
-                  na.rm = TRUE)
+                  na.rm = TRUE) #Get the value at the 75th quartile data
 ```
 
 
 show correlations between "S1","E2", "P1"
 ```{r}
-cor(x=frag23_sub[,-c(1,2)]) #no 'Country', no "Total'
+cor(x=frag23_sub[,-c(1,2)]) #Correlate the data between the columns 1 and 2
 ```
 
 
@@ -104,15 +103,15 @@ cor(x=frag23_sub[,-c(1,2)]) #no 'Country', no "Total'
 #?install.packages("corrtable")
 
 ```{r}
-corrtable::correlation_matrix(df = frag23_sub[,-c(1,2)])
+corrtable::correlation_matrix(df = frag23_sub[,-c(1,2)]) #Make sure the corrtable package has been installed and show the correleation between 1st and 2nd columns which are S1 and E2
 ```
 
 
 regress P1 and E2 on S1
 ```{r}
-lm(S1~P1+E2,data=frag23_sub)
-model <- lm(S1 ~ P1 + E2, data = frag23_sub)
-summary(model)
+lm(S1~P1+E2,data=frag23_sub) #Regress between independent variables P1 and E2 on dependenced variable S1
+model <- lm(S1 ~ P1 + E2, data = frag23_sub) #save the data in the model variable
+summary(model) #Summarize the data in the model
 ```
 
 
@@ -120,29 +119,29 @@ summary(model)
 
 give me a plot for the 'P1' variable
 ```{r}
-hist(x = frag23_sub$P1) #base r
+hist(x = frag23_sub$P1) #Draw a histogram on variable P1
 ```
 
 
 visual correlation between S1 and E2
 ```{r}
-plot(x=frag23_sub$S1, y=frag23_sub$E2)
+plot(x=frag23_sub$S1, y=frag23_sub$E2) #Plot the correlation between S1 and E2
 ```
 
 ```{r}
 ## color points if country is on the worst quartile of Total
 frag23_sub$Total>=q3_Total
-frag23_sub$worstQt=frag23_sub$Total>=q3_Total
+frag23_sub$worstQt=frag23_sub$Total>=q3_Total #Find the worst quartile and save it in variable
 
 plot(frag23_sub$S1, 
      frag23_sub$E2,pch=20,
-     col = as.factor(frag23_sub$worstQt))
+     col = as.factor(frag23_sub$worstQt)) #Plot the worst quartile in color
 ```
 
 
 visual of the regression P1 and E2 on S1
 ```{r}
-library(sjPlot)
-plot_models(model)
+library(sjPlot) #Download the libarary sjPlot
+plot_models(model) #Plot the overall model
 ```
 
